--- a/index.html
+++ b/index.html
@@ -20,24 +20,24 @@
             <nav class="header_navpanel">
                 <ul class="header_navpanel--list">
                     <li class="header_navpanel--list--item">
-                        <a href="">Главная</a>
+                        <a href="./">Главная</a>
                     </li>
                     <li class="header_navpanel--list--item">
-                        <a href="">Мероприятия</a>
+                        <a href="./event.html">Мероприятия</a>
                     </li>
                     <li class="header_navpanel--list--item">
-                        <a href="">Комплексы</a>
+                        <a href="./complex.html">Комплексы</a>
                     </li>
                     <li class="header_navpanel--list--item">
-                        <a href="">Услуги</a>
+                        <a href="./service.html">Услуги</a>
                     </li>
                     <li class="header_navpanel--list--item">
-                        <a href="">Контакты</a>
+                        <a href="./contacs.html">Контакты</a>
                     </li>
                 </ul>
             </nav>
             <div class="header_botton">
-                <a href="">Позвонить</a>
+                <a href="./contacs.html">Позвонить</a>
             </div>
         </div>
     </header>
@@ -45,7 +45,7 @@
         <div class="container">
             <section class="main_cover">
                 <h1>Если париться, то только у нас!</h1>
-                <a href="">Записаться</a>
+                <a href="./contacs.html">Записаться</a>
             </section>
             <scetion class="comments">
                 <div class="comments_card">
@@ -73,7 +73,7 @@
             <section class="popular">
                 <div class="popular_title">
                     <h2>Популярное</h2>
-                    <a href="">Все варианты</a>
+                    <a href="./complex.html">Все варианты</a>
                 </div>
                 <div class="popular_list">
                     <div class="popular_list--item">
@@ -221,7 +221,7 @@
                 <div class="master_content">
                     <h2>Лучшие банные мастера района</h2>
                     <p>Наши мастера имеют опыт более 5 лет. В нашем ассортименте имеется все, для проведения мероприятий и банных процедур.</p>
-                    <a href="">Услуги</a>
+                    <a href="./service.html">Услуги</a>
                 </div>
             </section>
         </div>
@@ -230,21 +230,21 @@
         <div class="container">
             <div class="footer">
                 <div class="footer_navigation">
-                    <a href="">
+                    <a href="./">
                         <img src="image/Logo.svg" alt="logo">
                     </a>
                     <div class="footer_navigation--link">
                         <ul class="footer_navigation--link--list">
-                            <li><a href="">Главная</a></li>
-                            <li><a href="">Контакты</a></li>
-                            <li><a href="">Услуги</a></li>
-                            <li><a href="">Комплексы</a></li>
-                            <li><a href="">Мероприятия</a></li>
+                            <li><a href="./">Главная</a></li>
+                            <li><a href="./contacs.html">Контакты</a></li>
+                            <li><a href="./service.html">Услуги</a></li>
+                            <li><a href="./complex.html">Комплексы</a></li>
+                            <li><a href="./event.html">Мероприятия</a></li>
                         </ul>
                     </div>
                 </div>
                 <div class="footer_call">
-                    <a href="">Позвонить</a>
+                    <a href="./contacs.html">Позвонить</a>
                 </div>
             </div>
             <div class="row"></div>
