repair btn call

--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
                     <div class="discount_info--text">
                         <h2>Баня со скидкой!</h2>
                         <p>Предварительно запишитесь на банные процедуры и получите скидку 20%</p>
-                        <a>Позвонить</a>
+                        <a href="tel:89094162602">Позвонить</a>
                     </div>
                     <div class="discount_info--image">
                         <img src="image/procent.png" alt="%">
