--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
     <link rel="stylesheet" href="style.css">
     <meta aria-keyshortcuts="" aria-placeholder="">
     <title>Банька на дровах|Русская баня|Финская баня|Хамам</title>
@@ -217,12 +218,36 @@
                 </div>
             </section>
             <section class="master">
-                <img src="image/viktor.png" alt="">
-                <div class="master_content">
-                    <h2>Лучшие банные мастера района</h2>
-                    <p>Наши мастера имеют опыт более 5 лет. В нашем ассортименте имеется все, для проведения мероприятий и банных процедур.</p>
-                    <a href="./service.html">Услуги</a>
-                </div>
+                <div class="swiper mySwiper">
+                    <div class="swiper-wrapper">
+                        <div class="swiper-slide">
+                            <img src="image/viktor.png" alt="">
+                            <div class="master_content">
+                                <h2>Лучшие банные мастера района</h2>
+                                <p>Наши мастера имеют опыт более 5 лет. В нашем ассортименте имеется все, для проведения мероприятий и банных процедур.</p>
+                                <a href="./service.html">Услуги</a>
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <img src="image/anatoly.png" alt="">
+                            <div class="master_content">
+                                <h2>Лучшие банные мастера района</h2>
+                                <p>Наши мастера имеют опыт более 5 лет. В нашем ассортименте имеется все, для проведения мероприятий и банных процедур.</p>
+                                <a href="./service.html">Услуги</a>
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <img src="image/anatoly.png" alt="">
+                            <div class="master_content">
+                                <h2>Лучшие банные мастера района</h2>
+                                <p>Наши мастера имеют опыт более 5 лет. В нашем ассортименте имеется все, для проведения мероприятий и банных процедур.</p>
+                                <a href="./service.html">Услуги</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="swiper-button-next"></div>
+                    <div class="swiper-button-prev"></div>
+                  </div>
             </section>
         </div>
     </main>
@@ -254,5 +279,7 @@
             </div>
         </div>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+    <script src="./scripts/script.js"></script>
 </body>
 </html>
